--- a/package.xml
+++ b/package.xml
@@ -17,12 +17,21 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rviz</build_depend>
+  <build_depend>visualization_msgs</build_depend>
+  <build_depend>tf</build_depend>
+  <build_depend>actionlib</build_depend>
+  <build_depend>tinyxml</build_depend>
+  <build_depend>cmake_modules</build_depend>
 
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>rviz</run_depend>
+  <run_depend>visualization_msgs</run_depend>
+  <run_depend>tf</run_depend>
+  <run_depend>actionlib</run_depend>
+  <run_depend>tinyxml</run_depend>
 
   <export>
     <rviz plugin="${prefix}/waterplus_map_tools_plugin.xml"/>
