--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0"?>
-<package>
+<?xml version="1.0"?><package>
   <name>waterplus_map_tools</name>
   <version>0.0.0</version>
   <description>The waterplus_map_tools package</description>
