--- a/package.xml
+++ b/package.xml
@@ -3,7 +3,7 @@
   <version>0.0.0</version>
   <description>The waterplus_map_tools package</description>
 
-  <maintainer email="zhangwanjie@126.com">Zhang Wanjie</maintainer>
+  <maintainer email="zhangwanjie@6-robot.com">Zhang Wanjie</maintainer>
 
   <url type="website">http://www.6-robot.com</url>
 
